2015-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* tests/toml_example.toml*: Added regression test from toml-lang repo
	* tests/toml_hard_example.toml*: Ditto
	* tests/tomlExamples.R: Added caller for toml examples
	* tests/tomlExamples.Rout.save: Added reference output

2015-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added, later disabled as Travis appears to be
	currently borked for new projects requiring C++11
