@@ -18,6 +18,7 @@ Type 'q()' to quit R.
 > 
 > library(RcppToml)
 > 
+> ## basic toml-lang::tests/example.toml
 > print(str(tomlparse("toml_example.toml")))
 List of 7
  $ title   : chr "TOML Example"
@@ -53,6 +54,7 @@ List of 7
   ..$ sku : int 738594937
 NULL
 > 
+> ## harder toml-lang::tests/hard_example.toml
 > print(str(tomlparse("toml_hard_example.toml")))
 List of 1
  $ the:List of 2
@@ -67,6 +69,107 @@ List of 1
   .. .. ..$ multi_line_array: chr "]"
 NULL
 > 
+> ## example toml-lang::examples/example-v0.4.0.toml
+> ##
+> ## note that we edited line 56 which cannot be parsed by cpptoml
+> print(str(tomlparse("toml_example-v0.4.0.toml")))
+Other: variety
+Other: variety
+List of 13
+ $ table   :List of 3
+  ..$ key     : chr "value"
+  ..$ subtable:List of 1
+  .. ..$ key: chr "another value"
+  ..$ inline  :List of 2
+  .. ..$ name :List of 2
+  .. .. ..$ first: chr "Tom"
+  .. .. ..$ last : chr "Preston-Werner"
+  .. ..$ point:List of 2
+  .. .. ..$ x: int 1
+  .. .. ..$ y: int 2
+ $ integer :List of 5
+  ..$ key1       : int 99
+  ..$ key2       : int 42
+  ..$ key3       : int 0
+  ..$ key4       : int -17
+  ..$ underscores:List of 3
+  .. ..$ key1: int 1000
+  .. ..$ key2: int 5349221
+  .. ..$ key3: int 12345
+ $ x       :List of 1
+  ..$ y:List of 1
+  .. ..$ z:List of 1
+  .. .. ..$ w: list()
+ $ string  :List of 3
+  ..$ basic    :List of 1
+  .. ..$ basic: chr "I'm a string. \\\"You can quote me\\\". Name\tJose\\nLocation\tSF."
+  ..$ multiline:List of 4
+  .. ..$ key1     : chr "One\\nTwo"
+  .. ..$ key2     : chr "One\\nTwo"
+  .. ..$ key3     : chr "One\\nTwo"
+  .. ..$ continued:List of 3
+  .. .. ..$ key1: chr "The quick brown fox jumps over the lazy dog."
+  .. .. ..$ key2: chr "The quick brown fox jumps over the lazy dog."
+  .. .. ..$ key3: chr "The quick brown fox jumps over the lazy dog."
+  ..$ literal  :List of 5
+  .. ..$ winpath  : chr "C:\\\\Users\\\\nodejs\\\\templates"
+  .. ..$ winpath2 : chr "\\\\\\\\ServerX\\\\admin$\\\\system32\\\\"
+  .. ..$ quoted   : chr "Tom \\\"Dubs\\\" Preston-Werner"
+  .. ..$ regex    : chr "<\\\\i\\\\c*\\\\s*>"
+  .. ..$ multiline:List of 2
+  .. .. ..$ regex2: chr "I [dw]on't need \\\\d{2} apples"
+  .. .. ..$ lines : chr "The first newline is\\ntrimmed in raw strings.\\n   All other whitespace\\n   is preserved.\\n"
+ $ float   :List of 4
+  ..$ fractional :List of 3
+  .. ..$ key1: num 1
+  .. ..$ key2: num 3.14
+  .. ..$ key3: num -0.01
+  ..$ exponent   :List of 3
+  .. ..$ key1: num 5e+22
+  .. ..$ key2: num 1e+06
+  .. ..$ key3: num -0.02
+  ..$ both       :List of 1
+  .. ..$ key: num 6.63e-34
+  ..$ underscores:List of 2
+  .. ..$ key1: num 9224617
+  .. ..$ key2: num Inf
+ $ products:List of 3
+  ..$ name : chr "Nail"
+  ..$ sku  : int 284758393
+  ..$ color: chr "gray"
+ $ products: list()
+ $ products:List of 2
+  ..$ name: chr "Hammer"
+  ..$ sku : int 738594937
+ $ boolean :List of 2
+  ..$ True : logi TRUE
+  ..$ False: logi FALSE
+ $ datetime:List of 3
+  ..$ key1: POSIXct[1:1], format: "1979-05-27 07:32:00"
+  ..$ key2: POSIXct[1:1], format: "1979-05-27 00:32:00"
+  ..$ key3: POSIXct[1:1], format: "1979-05-27 00:32:00"
+ $ array   :List of 6
+  ..$ key1: int [1:3] 1 2 3
+  ..$ key2: chr [1:3] "red" "yellow" "green"
+  ..$ key3:List of 2
+  .. ..$ : int [1:2] 1 2
+  .. ..$ : int [1:3] 3 4 5
+  ..$ key4:List of 2
+  .. ..$ : int [1:2] 1 2
+  .. ..$ : chr [1:3] "a" "b" "c"
+  ..$ key5: int [1:3] 1 2 3
+  ..$ key6: int [1:2] 1 2
+ $ fruit   :List of 2
+  ..$ name: chr "banana"
+  ..$     : chr "variety"
+ $ fruit   :List of 3
+  ..$ name    : chr "apple"
+  ..$         : chr "variety"
+  ..$ physical:List of 2
+  .. ..$ color: chr "red"
+  .. ..$ shape: chr "round"
+NULL
+> 
 > proc.time()
    user  system elapsed 
-  0.512   0.412   0.478 
+  0.548   0.444   0.530 
